deployments/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rest-ingestion-service
spec:
  selector:
    app: rest-ingestion-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
